# Anti-unified-APT--FS

./: README.md  all_debs.py  all_debs.txt  fs.py  fsup.py  installed.py  list_dict_installed.txt  list_installed.txt  tree.py
fd/0ad/: 0ad-data-common  libnspr4
fd/0install/: 0install-core
fd/389-ds/: cockpit-389-ds
fd/389-ds-base/: 389-ds-base-legacy-tools
fd/389-ds-base-dev/: 389-ds-base-libs  libldap2-dev
fd/7kaa/: libenet7
fd/Chart-1.9-GNftyg69sV4LyOIozJnJ6M/: Chart-1.9-GNftyg69sV4LyOIozJnJ6M
fd/Chart-cairo-1.9-8GPz1FhkGD5BkCszsxW7fr/: Chart-cairo-1.9-8GPz1FhkGD5BkCszsxW7fr
fd/ChasingBottoms-1.3.1.4-HTzyi8v3Sp410DV3qJyjXJ/: ChasingBottoms-1.3.1.4-HTzyi8v3Sp410DV3qJyjXJ
fd/ConfigFile-1.1.4-ErSBzk4zpIRgJJhurQFr4/: ConfigFile-1.1.4-ErSBzk4zpIRgJJhurQFr4
fd/a2ps/: libpaper1
fd/jbuilder/: dune
fl/: 0ad  0ad-data  0install  0xffff  2048-qt  2ping  2to3  2vcard  389-ds  389-ds-base  389-ds-base-dev  3dchess  3depict  4digits  4g8  4pane  4store  4ti2  4ti2-doc  6tunnel  7kaa  7kaa-data  9base  9menu  9mount  9wm  Agda-2.5.4.1-Hn9DfijrxNi2OOIMamLJRg  Boolean-0.2.4-AceK7u0Dj214dOoYG66p7K  BoundedChan-1.0.3.0-EBkqFgOOvKXvkfdffYY5N  DAV-1.3.3-5YXurrWxnO1C5JNbbkCfFN  Decimal-0.5.1-6f3P93TwClR5pZQSGcTCYq  Diff-0.3.4-2nHlmnArMpA8s1ZgPQDn29  EdisonCore-1.3.2.1-FzcjTQ6J4Tn9kq8OF1wE18  GLUT-2.7.0.14-1pU9K2625ki2qEGaaHeSCv  Glob-0.9.2-9jHCCBiooAn4aXlAYxj4ng  HDBC-sqlite3-2.3.3.1-HtLw0J20EMjBDniY8D9MBJ  HTTP-4000.3.12-5tVk7jfVaK89u1sFbo4q0w  HUnit-1.6.0.0-JrvWwD5n0JVL2qYKQOHt3C  HaXml-1.25.4-3LbDpD44wKQAzSUiQlw3Vb  Hclip-3.0.0.4-AbUf6EqRoTy5QWPt5uXEPV  (+43281 more)
(+17411 files in other folders)
