{'Package': 'dune', 'Version': '1.6.2-2', 'Installed-Size': '9190', 'Maintainer': 'Debian OCaml Maintainers <debian-ocaml-maint@lists.debian.org>', 'Architecture': 'amd64', 'Replaces': 'jbuilder (<< 1.0~beta20-1), whitedune (<< 0.30.10-2.2)', 'Provides': 'jbuilder', 'Depends': [['libc6', '>=', '2.17']], 'Breaks': 'jbuilder (<< 1.0~beta20-1), whitedune (<< 0.30.10-2.2)', 'Description': 'composable build system for OCaml projects', 'Homepage': 'https://github.com/janestreet/jbuilder', 'Description-md5': '64e99a37284441f470dcebd25a8f5953', 'Section': 'ocaml', 'Priority': 'optional', 'Filename': 'pool/main/d/dune/dune_1.6.2-2_amd64.deb', 'Size': '1075228', 'SHA256': '38d7cc769537d3bb4f1efe14d73a4df9d9bf59fe7d7a6f4811a4371a4f03bb28'}